deploy: kosalanuwan/gh-site-bliki@dae33dabcee6d99b7ead41e33d40b85dd113cb61

--- a/getting-started/dev-environments/index.html
+++ b/getting-started/dev-environments/index.html
@@ -11,7 +11,7 @@
   <meta name="description" content="&lt;a href=&quot;https://kosalanuwan.github.io&quot;&gt;&lt;span&gt;@&lt;/span&gt;kosalanuwan&lt;/a&gt;'s developer notes for himself. This bliki, its content, and opinions are his own.">
 
   
-    <meta name="keywords" content="etc">
+    <meta name="keywords" content="getting-started">
   
 
   
@@ -20,11 +20,11 @@
 
   <title>
     
-      Hello world :wave: &middot; #bliki
+      Setting up the developer environment &middot; #bliki
     
   </title>
 
-  <link rel="canonical" href="https://kosalanuwan.github.io/bliki/etc/hello-world/">
+  <link rel="canonical" href="https://kosalanuwan.github.io/bliki/getting-started/dev-environments/">
   <link rel="alternate" type="application/rss+xml" title="RSS Feed for #bliki" href="https://kosalanuwan.github.io/bliki/atom.xml">
   <!-- Fonts -->
   <link rel="dns-prefetch" href="//fonts.googleapis.com">
@@ -32,7 +32,7 @@
   <!-- Icons -->
   <link rel="shortcut icon" href="/bliki/assets/img/favicon.ico">
   <!-- CSS -->
-  <link rel="stylesheet" href="/bliki/assets/css/main.css?202010241838" type="text/css">
+  <link rel="stylesheet" href="/bliki/assets/css/main.css?202012090632" type="text/css">
 </head>
 
 <body>
@@ -56,8 +56,7 @@
   </div>
   <hr>
   <div class="container">
-    <h2>Hello world <img class="emoji" title=":wave:" alt=":wave:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f44b.png" height="20" width="20">
-</h2>
+    <h2>Setting up the developer environment</h2>
 
 
 
@@ -68,7 +67,7 @@
 
 
 <div class="meta">
-    17th July 1991
+    10th February 2020
 </div>
 
 <small class="meta">
@@ -86,27 +85,7 @@
     <blockquote></blockquote>
   
   
-  <p>Here’s why I gave up all those wide spread of productivity and notes taking apps from Evernote to Onenote, Workflowy, Trello, Todoist, and even Notion. They are all great apps, but it makes more sense, at least for me, to use GitHub since <a href="/etc/personal-productivity/">I interact with it daily, so why not use it for everything else</a>.  Just my personal preference.</p>
-
-<blockquote>
-  <p>GitHub used to be my unicorn and now it is <em><strong>my bitch</strong></em>. I’m that nerd <img class="emoji" title=":nerd_face:" alt=":nerd_face:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f913.png" height="20" width="20">!</p>
-</blockquote>
-
-<p>In case you were wondering, this site is:</p>
-
-<ul>
-  <li>Originally, a flavor of <a href="https://github.com/kosalanuwan/gh-site-otto-theme/#readme">the Otto theme</a>
-</li>
-  <li>Built and published with <a href="https://github.com/peaceiris/actions-gh-pages">GitHub Pages Actions</a>
-</li>
-  <li>Hosted on <a href="https://github.com/kosalanuwan/bliki">GitHub Pages</a>, and</li>
-  <li>Developed with <a href="https://code.visualstudio.com/">VS Code</a> using <a href="https://github.com/kosalanuwan/devcontainers">developer container for Jekyll</a>
-</li>
-</ul>
-
-<p>And, this article amongst rest are written in <a href="">Markdown</a> with <a href="">Paper app</a>.</p>
-
-<p>For starters, you want to have a look at <a href="">Docsify</a> and it’s <a href="">awesome list</a> is a good source of information. <a href="">I played around a bit with Docsify</a> and <a href="">wrote a plugin or two</a> as well for my own sanity, but that was before I picked Jekyll and it’s still a work in-progress.</p>
+  
 
 </article>
   </div>
