--- a/patterns/ef/pipes-and-filters/index.html
+++ b/patterns/ef/pipes-and-filters/index.html
@@ -11,6 +11,8 @@
   <meta name="description" content="&lt;a href=&quot;https://kosalanuwan.github.io&quot;&gt;&lt;span&gt;@&lt;/span&gt;kosalanuwan&lt;/a&gt;'s developer notes for himself. This bliki, its content, and opinions are his own.">
 
   
+    <meta name="keywords" content="patterns, ef">
+  
 
   
     <meta name="robots" content="all">
@@ -18,11 +20,11 @@
 
   <title>
     
-      404: Page not found &middot; #bliki
+      Reusing query logic with pipes and filters &middot; #bliki
     
   </title>
 
-  <link rel="canonical" href="https://kosalanuwan.github.io/bliki/404.html">
+  <link rel="canonical" href="https://kosalanuwan.github.io/bliki/patterns/ef/pipes-and-filters/">
   <link rel="alternate" type="application/rss+xml" title="RSS Feed for #bliki" href="https://kosalanuwan.github.io/bliki/atom.xml">
   <!-- Fonts -->
   <link rel="dns-prefetch" href="//fonts.googleapis.com">
@@ -54,10 +56,39 @@
   </div>
   <hr>
   <div class="container">
-    <h2 id="aw-snap">Aw, Snap!</h2>
+    <h2>Reusing query logic with pipes and filters</h2>
 
-<p>Sorry, we’ve misplaced that URL or it’s pointing to something that doesn’t exist. <a href="/">Head back home</a> to try finding it again.</p>
 
+
+
+  
+
+
+
+
+<div class="meta">
+    5th November 2010
+</div>
+
+<small class="meta">
+    1 minute read
+</small>
+
+<div class="twitter-button">
+    <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="large" data-via="kosalanuwan" data-hashtags="#bliki" data-show-count="false">Tweet</a>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+</div>
+
+
+<article>
+  
+    <blockquote>
+</blockquote>
+  
+  
+  
+
+</article>
   </div>
   <hr>
   <div class="container">
