--- a/personal-notes/personal-productivity/index.html
+++ b/personal-notes/personal-productivity/index.html
@@ -11,7 +11,7 @@
   <meta name="description" content="&lt;a href=&quot;https://kosalanuwan.github.io&quot;&gt;&lt;span&gt;@&lt;/span&gt;kosalanuwan&lt;/a&gt;'s developer notes for himself. This bliki, its content, and opinions are his own.">
 
   
-    <meta name="keywords" content="etc">
+    <meta name="keywords" content="personal-notes">
   
 
   
@@ -24,7 +24,7 @@
     
   </title>
 
-  <link rel="canonical" href="https://kosalanuwan.github.io/bliki/etc/personal-productivity/">
+  <link rel="canonical" href="https://kosalanuwan.github.io/bliki/personal-notes/personal-productivity/">
   <link rel="alternate" type="application/rss+xml" title="RSS Feed for #bliki" href="https://kosalanuwan.github.io/bliki/atom.xml">
   <!-- Fonts -->
   <link rel="dns-prefetch" href="//fonts.googleapis.com">
@@ -32,7 +32,7 @@
   <!-- Icons -->
   <link rel="shortcut icon" href="/bliki/assets/img/favicon.ico">
   <!-- CSS -->
-  <link rel="stylesheet" href="/bliki/assets/css/main.css?202010241838" type="text/css">
+  <link rel="stylesheet" href="/bliki/assets/css/main.css?202012090632" type="text/css">
 </head>
 
 <body>
@@ -91,33 +91,33 @@
 
 <ul>
   <li>
-<a href="#notes">Notes</a> written in markdown using <a href="">Paper app</a>
+<a href="#notes">Notes</a> written in markdown using <a href="https://">Paper app</a>
 </li>
   <li>
 <a href="#task-tracking">Task tracking</a> using <a href="https://github.com/kosalanuwan">GitHub</a>
 </li>
   <li>
-<a href="#todo-list">Todo list</a> of <em>ahaa moments</em> using <a href="">GitHub app</a>
+<a href="#todo-list">Todo list</a> of <em>ahaa moments</em> using <a href="https://">GitHub app</a>
 </li>
   <li>
 <a href="#reminders">Reminders</a> are always on a calendar</li>
   <li>
-<a href="#emails">Emails</a> are filtered using <a href="">Outlook rules</a>
+<a href="#emails">Emails</a> are filtered using <a href="https://">Outlook rules</a>
 </li>
   <li>
-<a href="#reading">Reading</a> as in books are only on <a href="">Audible app</a>
+<a href="#reading">Reading</a> as in books are only on <a href="https://">Audible app</a>
 </li>
   <li>
-<a href="#budgets">Budgets</a> are planned monthly using <a href="">Google Keep</a>
+<a href="#budgets">Budgets</a> are planned monthly using <a href="https://">Google Keep</a>
 </li>
 </ul>
 
-<p>I interact with GitHub daily so <a href="/bliki/hello-world/">why not use it for everything else</a>. I’m that nerd <img class="emoji" title=":nerd_face:" alt=":nerd_face:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f913.png" height="20" width="20">!</p>
+<p>I interact with GitHub daily so <a href="https://kosalanuwan.github.io/bliki/hello-world/">why not use it for everything else</a>. I’m that nerd <img class="emoji" title=":nerd_face:" alt=":nerd_face:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f913.png" height="20" width="20">!</p>
 
 <h3 id="notes">Notes</h3>
 
 <ul>
-  <li><a href="/etc/hello-world/">Written in markdown using Paper app</a></li>
+  <li><a href="https://kosalanuwan.github.io/bliki/hello-world/">Written in markdown using Paper app</a></li>
 </ul>
 
 <p>Previously used OneNote, Evernote, Workflowy, Dropbox Paper, and even Notion.</p>
@@ -139,13 +139,13 @@
 
 <ul>
   <li>
-<img class="emoji" title=":lock:" alt=":lock:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f512.png" height="20" width="20"> <a href="https://github.com/kosalanuwan/todos">Todos repository on GitHub</a>
+<img class="emoji" title=":lock:" alt=":lock:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f512.png" height="20" width="20"> <a href="https://github.com/kosalanuwan/todo-list/#readme">Todos repository on GitHub</a>
 </li>
   <li>
 <a href="">GitHub Issues</a> for each todo item</li>
 </ul>
 
-<p>It seems like a pretty fantastic idea in lieu of traditional Trello, Todoist, Microsoft Todo, Google Keep, and the like. You want to try out <a href="">GitHub app on the mobile</a>.</p>
+<p>It seems like a pretty fantastic idea in lieu of traditional Trello, Todoist, Microsoft Todo, Google Keep, and the like. You want to try out <a href="https://">GitHub app on the mobile</a>.</p>
 
 <h3 id="reminders">Reminders</h3>
 
@@ -167,9 +167,9 @@
 <h3 id="reading">Reading</h3>
 
 <ul>
-  <li>Audio books purchased from <a href="https://audible.com">Audible</a>
+  <li>Audio books purchased from <a href="http://">Audible</a>
 </li>
-  <li>Listens using <a href="">Audible app</a> while on the go</li>
+  <li>Listens using <a href="https://">Audible app</a> while on the go</li>
 </ul>
 
 <p>Credit goes to former colleague and a dear friend, <a href="https://github.com/hasith">@hasith</a>, for showing how to keep up using Audible. I’m a snail-paced reader, still reads a chapter or two occationally <a href="/books/">to get inspiration for fiction writing</a>.</p>
@@ -182,6 +182,7 @@
 </ul>
 
 <p>Previously tried many apps and even spreadsheets but that doesn’t seemed to work consistantly for not more than a few months.</p>
+
 
 </article>
   </div>
