--- a/personal-notes/hello-world/index.html
+++ b/personal-notes/hello-world/index.html
@@ -32,7 +32,7 @@
   <!-- Icons -->
   <link rel="shortcut icon" href="/journal/assets/img/favicon.ico">
   <!-- CSS -->
-  <link rel="stylesheet" href="/journal/assets/css/main.css?202012230756" type="text/css">
+  <link rel="stylesheet" href="/journal/assets/css/main.css?202012231029" type="text/css">
 </head>
 
 <body>
@@ -86,16 +86,11 @@
     <blockquote></blockquote>
   
   
-  <p>Here’s why I gave up all those widespread of productivity and notes taking apps from Evernote to Onenote, Workflowy, Trello, Todoist, and even Notion. They are all great apps, but it makes more sense, at least for me, to use GitHub since <a href="https://kosalanuwan.github.io/journal/productivity/">I interact with it daily, so why not use it for everything else</a>.  Just my personal preference.</p>
+  <p>GitHub used to be my unicorn and now it is <strong><em>my bitch</em></strong>. I interact with GitHub daily, so why not use it for live journal? It makes more sense, at least for me. I’m that nerd <img class="emoji" title=":nerd_face:" alt=":nerd_face:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f913.png" height="20" width="20"></p>
 
 <p><a href="https://github.com/kosalanuwan"><img src="http://ghchart.rshah.org/BF0000/kosalanuwan" alt="Kosala Nuwan's GitHub contributions" width="100%"></a></p>
 
-<blockquote>
-  <p>GitHub used to be my unicorn and now it is <em><strong>my bitch</strong></em>. I’m that nerd <img class="emoji" title=":nerd_face:" alt=":nerd_face:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f913.png" height="20" width="20">!</p>
-</blockquote>
-
-<p>In case you were wondering, this site is:</p>
-
+<p>In case you are wondeirng, this site is:</p>
 <ul>
   <li>Originally, a flavor of <a href="https://github.com/kosalanuwan/gh-site-otto-theme/#readme">the Otto theme</a>
 </li>
@@ -108,7 +103,7 @@
 
 <p>And, this article amongst rest are written in <a href="https://">Markdown</a> with <a href="https://">Paper app</a>.</p>
 
-<p>For starters, you want to have a look at <a href="https://">Docsify</a> and it’s <a href="https://">awesome list</a> is a good source of information. <a href="https://">I played around a bit with Docsify and wrote a plugin or two</a> as well for own sanity, but that was before I picked Jekyll and it’s still a work-in-progress.</p>
+<p>The truth is I have tried out all those widespread of notes taking apps from Evernote to Onenote, Workflowy, Trello, Todoist, and even Notion. For the record they all seemed great but this is just my personal preference.</p>
 
 
 </article>
