deploy: kosalanuwan/gh-site-journal@66168a2b2ab22496d23e5d14d36b91b95d0622ef

--- a/personal-notes/hello-world/index.html
+++ b/personal-notes/hello-world/index.html
@@ -32,7 +32,7 @@
   <!-- Icons -->
   <link rel="shortcut icon" href="/journal/assets/img/favicon.ico">
   <!-- CSS -->
-  <link rel="stylesheet" href="/journal/assets/css/main.css?202012231029" type="text/css">
+  <link rel="stylesheet" href="/journal/assets/css/main.css?202012231032" type="text/css">
 </head>
 
 <body>
@@ -90,7 +90,7 @@
 
 <p><a href="https://github.com/kosalanuwan"><img src="http://ghchart.rshah.org/BF0000/kosalanuwan" alt="Kosala Nuwan's GitHub contributions" width="100%"></a></p>
 
-<p>In case you are wondeirng, this site is:</p>
+<p>In case you are wondeirng, this entire site is:</p>
 <ul>
   <li>Originally, a flavor of <a href="https://github.com/kosalanuwan/gh-site-otto-theme/#readme">the Otto theme</a>
 </li>
