deploy: kosalanuwan/gh-site-journal@fb94f043681364941b28c1dc0069659e5894a5d9

--- a/personal-notes/hello-world/index.html
+++ b/personal-notes/hello-world/index.html
@@ -32,7 +32,7 @@
   <!-- Icons -->
   <link rel="shortcut icon" href="/journal/assets/img/favicon.ico">
   <!-- CSS -->
-  <link rel="stylesheet" href="/journal/assets/css/main.css?202012231032" type="text/css">
+  <link rel="stylesheet" href="/journal/assets/css/main.css?202012231038" type="text/css">
 </head>
 
 <body>
@@ -90,7 +90,9 @@
 
 <p><a href="https://github.com/kosalanuwan"><img src="http://ghchart.rshah.org/BF0000/kosalanuwan" alt="Kosala Nuwan's GitHub contributions" width="100%"></a></p>
 
-<p>In case you are wondeirng, this entire site is:</p>
+<p>The truth is I have tried out all those widespread of notes taking apps from Evernote to Onenote, Workflowy, Trello, Todoist, and even Notion. For the record they all seemed great but this is just my personal preference.</p>
+
+<p>In case you were wondeirng, this entire site is:</p>
 <ul>
   <li>Originally, a flavor of <a href="https://github.com/kosalanuwan/gh-site-otto-theme/#readme">the Otto theme</a>
 </li>
@@ -102,8 +104,6 @@
 </ul>
 
 <p>And, this article amongst rest are written in <a href="https://">Markdown</a> with <a href="https://">Paper app</a>.</p>
-
-<p>The truth is I have tried out all those widespread of notes taking apps from Evernote to Onenote, Workflowy, Trello, Todoist, and even Notion. For the record they all seemed great but this is just my personal preference.</p>
 
 
 </article>
