deploy: kosalanuwan/gh-site-journal@3029e4a232688a5bebc16656a53301340b8fa5f5

--- a/personal-notes/personal-productivity/index.html
+++ b/personal-notes/personal-productivity/index.html
@@ -32,7 +32,7 @@
   <!-- Icons -->
   <link rel="shortcut icon" href="/journal/assets/img/favicon.ico">
   <!-- CSS -->
-  <link rel="stylesheet" href="/journal/assets/css/main.css?202012231038" type="text/css">
+  <link rel="stylesheet" href="/journal/assets/css/main.css?202012250201" type="text/css">
 </head>
 
 <body>
@@ -71,7 +71,7 @@
 </div>
 
 <small class="meta">
-    2 minute read
+    1 minute read
 </small>
 
 <div class="twitter-button">
@@ -85,10 +85,9 @@
     <blockquote></blockquote>
   
   
-  <p>Here’s my <em>deliberate efforts</em> to keep dancing. These tools and techniques are based on my personal preference and probably might work for you as well. Also, I may have literally let go of some of these, with <img class="emoji" title=":heart:" alt=":heart:" src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png" height="20" width="20"> of course, for the preference of my employers and clientele. For starters, you want to have a look at the <a href="https://www.youtube.com/playlist?list=PL1emq-Tbw7AG2yr7uxrnHLZpznSt_dX-z">Productivity 101 playlist on YouTube</a>.</p>
+  <p>Here’s my <em>deliberate efforts</em> to keep dancing. These tools and apps are my personal preference and probably might work for you as well. Not going to lie, I may have literally let go of some of these for the preference of my employers and clientele.</p>
 
 <h3 id="contents">Contents</h3>
-
 <ul>
   <li>
 <a href="#notes">Notes</a> written in markdown using <a href="https://">Paper app</a>
@@ -112,10 +111,7 @@
 </li>
 </ul>
 
-<p>I interact with GitHub daily so <a href="https://kosalanuwan.github.io/journal/hello-world/">why not use it for everything else</a>. I’m that nerd <img class="emoji" title=":nerd_face:" alt=":nerd_face:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f913.png" height="20" width="20">!</p>
-
 <h3 id="notes">Notes</h3>
-
 <ul>
   <li><a href="https://kosalanuwan.github.io/journal/hello-world/">Written in markdown using Paper app</a></li>
 </ul>
@@ -123,7 +119,6 @@
 <p>Previously used OneNote, Evernote, Workflowy, Dropbox Paper, and even Notion.</p>
 
 <h3 id="task-tracking">Task tracking</h3>
-
 <ul>
   <li>
 <a href="">GitHub Issues</a> for task and bug tracking</li>
@@ -136,7 +131,6 @@
 <p>This is to keep a track of todos on various projects. Not meant to plan my daily routines. Previously used Trello, Todoist, and even Asana.</p>
 
 <h3 id="todo-list">Todo list</h3>
-
 <ul>
   <li>
 <img class="emoji" title=":lock:" alt=":lock:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f512.png" height="20" width="20"> <a href="https://github.com/kosalanuwan/todo-list/#readme">Todos repository on GitHub</a>
@@ -148,7 +142,6 @@
 <p>It seems like a pretty fantastic idea in lieu of traditional Trello, Todoist, Microsoft Todo, Google Keep, and the like. You want to try out <a href="https://">GitHub app on the mobile</a>.</p>
 
 <h3 id="reminders">Reminders</h3>
-
 <ul>
   <li><a href="https://calendar.google.com">Google Calendar</a></li>
 </ul>
@@ -156,7 +149,6 @@
 <p>Previously tried Workflowy, Microsoft Todo, Trello, but it has always been a <em>calendar</em> when scheduling meetings, appointments, reminders et al. whether it’s personal or work.</p>
 
 <h3 id="emails">Emails</h3>
-
 <ul>
   <li>
 <a href="">Microsoft Outlook Rules</a> to filter and process emails and meeting invites</li>
@@ -165,7 +157,6 @@
 <p>You want to have a look at <a href="https://www.hanselman.com/blog/TheThreeMostImportantOutlookRulesForProcessingMail.aspx">Scott Hanselman’s article on Outlook rules for processing emails</a>.</p>
 
 <h3 id="reading">Reading</h3>
-
 <ul>
   <li>Audio books purchased from <a href="http://">Audible</a>
 </li>
@@ -175,7 +166,6 @@
 <p>Credit goes to former colleague and a dear friend, <a href="https://github.com/hasith">@hasith</a>, for showing how to keep up using Audible. I’m a snail-paced reader, still reads a chapter or two occasionally <a href="/books/">to get inspiration for fiction writing</a>.</p>
 
 <h3 id="budgets">Budgets</h3>
-
 <ul>
   <li>
 <a href="">Google Keep</a> as a simple list of expenses with the budgeted amount</li>
