--- a/vanilla-js/dom-manipulation-library/index.html
+++ b/vanilla-js/dom-manipulation-library/index.html
@@ -32,7 +32,7 @@
   <!-- Icons -->
   <link rel="shortcut icon" href="/journal/assets/img/favicon.ico">
   <!-- CSS -->
-  <link rel="stylesheet" href="/journal/assets/css/main.css?202012270514" type="text/css">
+  <link rel="stylesheet" href="/journal/assets/css/main.css?202012270519" type="text/css">
 </head>
 
 <body>
@@ -111,7 +111,7 @@
 
 <p>First up is an <a href="https://developer.mozilla.org/en-US/docs/Glossary/IIFE">IIFE pattern</a>. It encapsulates all my code and runs as soon as it is defined. So a little anonymous function magic code is all that is necessary to get started. Kids’ stuff.</p>
 
-<p>Next is a <a href="https://developer.mozilla.org/en-US/docs/Glossary/Polyfill">Polyfill pattern</a>. I can define all the DOM manipulation script required but the browser will pick them up if not natively supported. <a href="https://github.com/Financial-Times/polyfill-library">@Financial-Times/polyfill-library</a> has plenty of polyfill code snippets. Excellent.</p>
+<p>Next is a <a href="https://developer.mozilla.org/en-US/docs/Glossary/Polyfill">Polyfill pattern</a>. I can define all the DOM manipulation script required but the browser will pick them up if not natively supported. <a href="https://github.com/Financial-Times/polyfill-library">@Financial-Times/polyfill-library</a> has plenty of polyfill code snippets. Moving right along.</p>
 
 <p><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Inheritance_and_the_prototype_chain">Chaining is a bit tricky</a>. Not only it requires a Prototype pattern, but you also have to search the <a href="https://developer.mozilla.org/en-US/docs/Web/API/Document_Object_Model">native DOM elements</a> too. I’m not going to lie, you’d be amazed how difficult it is to find the pieces and if you bind the script to the wrong element, nothing works.</p>
 
