deploy: kosalanuwan/gh-site-journal@8c2f2664112175b25b67a675f36c01ac83468e3e

--- a/javascript/jquery-dom-manipulation-library/index.html
+++ b/javascript/jquery-dom-manipulation-library/index.html
@@ -11,7 +11,7 @@
   <meta name="description" content="&lt;a href=&quot;https://kosalanuwan.github.io&quot;&gt;&lt;span&gt;@&lt;/span&gt;kosalanuwan&lt;/a&gt;'s developer notes for himself. This journal, its content, and opinions are his own.">
 
   
-    <meta name="keywords" content="vanilla-js">
+    <meta name="keywords" content="javascript">
   
 
   
@@ -20,11 +20,11 @@
 
   <title>
     
-      Writing a DOM manipulation library &middot; #journal
+      Writing a jQuery-like DOM manipulation library &middot; #journal
     
   </title>
 
-  <link rel="canonical" href="https://kosalanuwan.github.io/journal/vanilla-js/dom-manipulation-library/">
+  <link rel="canonical" href="https://kosalanuwan.github.io/journal/javascript/jquery-dom-manipulation-library/">
   <link rel="alternate" type="application/rss+xml" title="RSS Feed for #journal" href="https://kosalanuwan.github.io/journal/atom.xml">
   <!-- Fonts -->
   <link rel="dns-prefetch" href="//fonts.googleapis.com">
@@ -32,7 +32,7 @@
   <!-- Icons -->
   <link rel="shortcut icon" href="/journal/assets/img/favicon.ico">
   <!-- CSS -->
-  <link rel="stylesheet" href="/journal/assets/css/main.css?202012271855" type="text/css">
+  <link rel="stylesheet" href="/journal/assets/css/main.css?202012310352" type="text/css">
 </head>
 
 <body>
@@ -56,7 +56,7 @@
   </div>
   <hr>
   <div class="container">
-    <h2>Writing a DOM manipulation library</h2>
+    <h2>Writing a jQuery-like DOM manipulation library</h2>
 
 
 
