--- a/javascript/vanilla-js-snippets/index.html
+++ b/javascript/vanilla-js-snippets/index.html
@@ -32,7 +32,7 @@
   <!-- Icons -->
   <link rel="shortcut icon" href="/journal/assets/img/favicon.ico">
   <!-- CSS -->
-  <link rel="stylesheet" href="/journal/assets/css/main.css?202012311413" type="text/css">
+  <link rel="stylesheet" href="/journal/assets/css/main.css?202012311803" type="text/css">
 </head>
 
 <body>
@@ -93,7 +93,7 @@
 
 <p>The first thing we’re going to need is a <a href="https://brave.com/download/">modern web browser</a> that ship with Developer Tools. I can use the <a href="https://www.youtube.com/watch?v=mzrP9AZvhpw">Snippets</a> and the <a href="https://www.youtube.com/watch?v=NCbpA4dFB58">Console</a> for coding and debugging so a little copy paste magic is all that is necessary to get started with vanilla JS. Kids’ stuff.</p>
 
-<p>Next is a free web host running locally.  I’m not gonna lie, you’d be amazed how tricky it is to <a href="https://stackabuse.com/how-to-start-a-node-server-examples-with-the-most-popular-frameworks/">pick a node-based web server</a>.  Not only are there many frameworks like <a href="https://github.com/fastify/fastify/#readme">Fastify</a>, but there are node modules with VS Code extensions like <a href="https://www.youtube.com/watch?v=mzrP9AZvhpw">Live Server</a>. There’s no way I’m going to do <code class="language-plaintext highlighter-rouge">npm init fastify</code> boilerplate code one at a time. So, it’s definitely necessary to break out <code class="language-plaintext highlighter-rouge">.devcontainer.json</code> and add the live server extension. Then I can create JS snippets with example static sites and the live server will preview on <code class="language-plaintext highlighter-rouge">localhost</code> for me. Excellent.</p>
+<p>Next is a free web host running locally. I’m not gonna lie, you’d be amazed how tricky it is to pick a node-based web server. Not only are there many frameworks like <a href="https://github.com/fastify/fastify/#readme">Fastify</a>, but there are node modules with VS Code extensions like <a href="https://www.youtube.com/watch?v=mzrP9AZvhpw">Live Server</a>. There’s no way I’m going to do <code class="language-plaintext highlighter-rouge">npm init fastify</code> boilerplate code one at a time. So, it’s definitely necessary to break out <code class="language-plaintext highlighter-rouge">.devcontainer.json</code> and add the live server extension. Then I can create JS snippets with example static sites and the live server will preview on <code class="language-plaintext highlighter-rouge">localhost</code> for me. Excellent.</p>
 
 <p><a href="https://github.com/kosalanuwan/vanilla-js-snippets/#readme">Here’s the library of vanilla JS snippets and examples</a> I pulled together so far.</p>
 
@@ -105,7 +105,6 @@
   <li>Fog City Learning. (2017). <a href="https://www.youtube.com/playlist?list=PLkinLw-1_vNmcddfq8DIeVl9YKI7bLnOb"><em>DevTools Basics: Google Chrome Developer Tools Tutorial</em></a> [Video playlist].</li>
   <li>Codes, J. (2020). <a href="https://www.youtube.com/watch?v=y4qqQeUDCBQ"><em>How to set up Live Server and browser auto refresh in Visual Studio Code</em></a> [Video].</li>
   <li>Mutunhire, T. (2018). <a href="https://stackabuse.com/how-to-start-a-node-server-examples-with-the-most-popular-frameworks/">How to start a node server: Examples with the most popular frameworks</a> [Blog] <em>Stack abuse</em>.</li>
-  <li>Plenderleith, S. (2020). <a href="https://www.youtube.com/playlist?list=PL1ZO2pWzCLRAtAf-JQWRn--CC4sTa1FRS"><em>Learning fastify</em></a> [Video playlist].</li>
 </ol>
 
 </article>
