deploy: kosalanuwan/gh-site-journal@535bf6afbc961094031167a13fd7dc1d1ff283e9

--- a/javascript/vanilla-js-snippets/index.html
+++ b/javascript/vanilla-js-snippets/index.html
@@ -32,7 +32,7 @@
   <!-- Icons -->
   <link rel="shortcut icon" href="/journal/assets/img/favicon.ico">
   <!-- CSS -->
-  <link rel="stylesheet" href="/journal/assets/css/main.css?202101120812" type="text/css">
+  <link rel="stylesheet" href="/journal/assets/css/main.css?202101220713" type="text/css">
 </head>
 
 <body>
@@ -91,7 +91,7 @@
 </div>
 
 <small class="meta">
-    1 minute read
+    2 minute read
 </small>
 
 <div class="twitter-button">
@@ -101,9 +101,9 @@
 
 
 <article>
-  <p>For the record, I may have code a few 100 lines of JS in the past decade but I’m getting all kinds of help from our friends at JS and VS Code community.</p>
+  <p>JavaScript is obnoxious! Do you think that’s because it is based on miserably failed languages - <a href="https://en.wikipedia.org/wiki/Java_(programming_language)">Java</a>, <a href="https://en.wikipedia.org/wiki/Scheme_(programming_language)">Scheme</a>, and <a href="https://en.wikipedia.org/wiki/Self_(programming_language)">Self</a> - at that time, or do you think it’s because Netscape did not give enuf time for Eich to design, implement, and ship JavaScript? For the  record, you can make things work with absolutely no idea of what you are doing in JavaScript.</p>
 
-<p>The truth is, JS has become inevitable. <a href="https://github.com/kosalanuwan/vanilla-js-snippets/#readme">I need a library of helper functions and boilerplate code written with vanilla JS</a>. Easy enuf, except I need a playground without having to install <a href="https://github.com/nvm-sh/nvm#installing-and-updating">NVM and Node.js</a> like they do on <a href="https://codepen.io/">Codepen</a>. It gives the whole thing a very <em>Control Freakery</em> feel since the development environment will be more implicit than, say, adhering to frameworks and tools to build and run from source.</p>
+<p>Truth is, I’m getting all kinds of help from our friends at JS and VS Code community and <a href="https://github.com/kosalanuwan/vanilla-js-snippets/#readme">I need a library of helper functions and boilerplate code written with vanilla JS</a>. Easy enuf, except I need a playground without having to install <a href="https://github.com/nvm-sh/nvm#installing-and-updating">NVM and Node.js</a> like they do on <a href="https://codepen.io/">Codepen</a>. It gives the whole thing a very <em>Control Freakery</em> feel since the development environment will be more implicit than, say, adhering to frameworks and tools to build and run from source.</p>
 
 <p><a href="https://user-images.githubusercontent.com/958227/103410858-57c90680-4b93-11eb-977c-2428ec914857.png"><img src="https://user-images.githubusercontent.com/958227/103410858-57c90680-4b93-11eb-977c-2428ec914857.png" alt="JS snippets in action"></a></p>
 
@@ -116,6 +116,7 @@
 <hr>
 
 <ol>
+  <li>Huges, D. (2014). <a href="https://www.youtube.com/playlist?list=PL62E185BB8577B63D"><em>Douglas Crockford Lectures on JavaScript</em></a> [Video playlist].</li>
   <li>Fog City Learning. (2017). <a href="https://www.youtube.com/playlist?list=PLkinLw-1_vNmcddfq8DIeVl9YKI7bLnOb"><em>DevTools Basics: Chrome Developer Tools Tutorial</em></a> [Video playlist].</li>
   <li>Codes, J. (2020). <a href="https://www.youtube.com/watch?v=y4qqQeUDCBQ"><em>How to set up Live Server and browser auto refresh in VS Code</em></a> [Video].</li>
   <li>Mutunhire, T. (2018). <a href="https://stackabuse.com/how-to-start-a-node-server-examples-with-the-most-popular-frameworks/">How to start a node server: examples with the most popular frameworks</a> [Blog] <em>Stack abuse</em>.</li>
