--- a/javascript/vanilla-js-snippets/index.html
+++ b/javascript/vanilla-js-snippets/index.html
@@ -32,7 +32,7 @@
   <!-- Icons -->
   <link rel="shortcut icon" href="/journal/assets/img/favicon.ico">
   <!-- CSS -->
-  <link rel="stylesheet" href="/journal/assets/css/main.css?202101220713" type="text/css">
+  <link rel="stylesheet" href="/journal/assets/css/main.css?202101310805" type="text/css">
 </head>
 
 <body>
@@ -101,9 +101,9 @@
 
 
 <article>
-  <p>JavaScript is obnoxious! Do you think that’s because it is based on miserably failed languages - <a href="https://en.wikipedia.org/wiki/Java_(programming_language)">Java</a>, <a href="https://en.wikipedia.org/wiki/Scheme_(programming_language)">Scheme</a>, and <a href="https://en.wikipedia.org/wiki/Self_(programming_language)">Self</a> - at that time, or do you think it’s because Netscape did not give enuf time for Eich to design, implement, and ship JavaScript? For the  record, you can make things work with absolutely no idea of what you are doing in JavaScript.</p>
+  <p>JavaScript is obnoxious! Do you think that’s because it is based on miserably failed languages - <a href="https://en.wikipedia.org/wiki/Java_(programming_language)">Java</a>, <a href="https://en.wikipedia.org/wiki/Scheme_(programming_language)">Scheme</a>, and <a href="https://en.wikipedia.org/wiki/Self_(programming_language)">Self</a> - at that time, or do you think it’s because Netscape did not give enuf time for Eich to design, implement, and ship JavaScript? For the record, you can make things work with absolutely no idea of what you are doing in JavaScript.</p>
 
-<p>Truth is, I’m getting all kinds of help from our friends at JS and VS Code community and <a href="https://github.com/kosalanuwan/vanilla-js-snippets/#readme">I need a library of helper functions and boilerplate code written with vanilla JS</a>. Easy enuf, except I need a playground without having to install <a href="https://github.com/nvm-sh/nvm#installing-and-updating">NVM and Node.js</a> like they do on <a href="https://codepen.io/">Codepen</a>. It gives the whole thing a very <em>Control Freakery</em> feel since the development environment will be more implicit than, say, adhering to frameworks and tools to build and run from source.</p>
+<p>The truth is, I’m getting all kinds of help from our friends at JS and VS Code community and <a href="https://github.com/kosalanuwan/vanilla-js-snippets/#readme">I need a library of helper functions and boilerplate code written with vanilla JS</a>. Easy enuf, except I need a playground without having to install <a href="https://github.com/nvm-sh/nvm#installing-and-updating">NVM and Node.js</a> like they do on <a href="https://codepen.io/">Codepen</a>. It gives the whole thing a very <em>Control Freakery</em> feel since the development environment will be more implicit than, say, adhering to frameworks and tools to build and run from source.</p>
 
 <p><a href="https://user-images.githubusercontent.com/958227/103410858-57c90680-4b93-11eb-977c-2428ec914857.png"><img src="https://user-images.githubusercontent.com/958227/103410858-57c90680-4b93-11eb-977c-2428ec914857.png" alt="JS snippets in action"></a></p>
 
